--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link type="image/x-icon" href="./img/favicon/favicon.ico" rel="shortcut icon">
+    <link rel="stylesheet" href="./style/style.css">
     <title>Prechu</title>
 </head>
 <body>
-    
+   
 </body>
 </html>
