--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
     <title>Prechu</title>
 </head>
 <body>
-   
+   <header>
+       <div class="container">
+           <div class="header-wrapper flex space-between flex-end">
+               <div class="header-logo"><h1>Prechu</h1></div>
+               <nav>
+                   <ul class="flex">
+                       <li><a href="#">Home</a></li>
+                       <li><a href="#">Products</a></li>
+                       <li><a href="#">Services</a></li>
+                       <li><a href="#">Contact</a></li>
+                   </ul>
+               </nav>
+           </div>
+       </div>
+   </header>
 </body>
 </html>
