--- a/index.html
+++ b/index.html
@@ -24,5 +24,20 @@
            </div>
        </div>
    </header>
+   <main>
+       <div class="container flex">
+            <div class="main-img">
+                <img src="./img/main/phone.png" alt="phone">
+            </div>
+            <div class="main-title">
+                <h2>Prechu is simply</h2>
+                <p>
+                    Better app for the <br/>
+                    shopping & selling 
+                </p>
+                <a href="#" class="button button-hover">Sign up now</a>
+            </div>
+       </div>
+   </main>
 </body>
 </html>
