--- a/index.html
+++ b/index.html
@@ -39,5 +39,26 @@
             </div>
        </div>
    </main>
+   <div class="ability">
+       <div class="container flex space-between ability-content">
+           <div class="ability-first">
+               <img src="./img/ability/pen.png" alt="pen">
+               <h3>It have more functional</h3>
+               <p>You can to use a many tools <br/>
+                  for wonderful writting about your goods</p>
+           </div>
+           <div>
+               <img src="./img/ability/monitor.png" alt="monitor">
+               <h3>It's cross-platform</h3>
+               <p>There are from any platform your goods</p>
+           </div>
+           <div class="ability-third">>
+               <img src="./img/ability/cart.png" alt="cart">
+               <h3>It's simple for trade</h3>
+               <p>Full functional is simple <br/>
+                  for your future </p>
+           </div>
+       </div>
+   </div>
 </body>
 </html>
