--- a/index.html
+++ b/index.html
@@ -60,5 +60,22 @@
            </div>
        </div>
    </div>
+   <div class="description">
+       <div class="container flex">
+           <div class="description-content">
+               <h1>Prechu is advantage!</h1>
+               <div>
+                   <img src="./img/description/bigcart.png" alt="bigcart">
+               </div>
+           </div>
+           <div class="description-text">
+               <h4>About us</h4>
+               <p>
+                We are company which foundation in 2012 year. We created many app with help our a big team so It is a our done app. We hope that It will help your selling.
+                If you want added a new offer you can to write us.
+               </p>
+           </div>
+       </div>
+   </div>
 </body>
 </html>
