--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
        <div class="container">
            <div class="header-wrapper flex space-between flex-end">
                <div class="header-logo"><h1>Prechu</h1></div>
-               <nav>
+               <button class="header-button">
+                   <img src="./img/media/menu.png" alt="menu">
+               </button>
+               <nav class="header-nav">
                    <ul class="flex">
                        <li><a href="#">Home</a></li>
                        <li><a href="#">Products</a></li>
@@ -40,28 +43,40 @@
        </div>
    </main>
    <div class="ability">
-       <div class="container flex space-between ability-content">
-           <div class="ability-first">
-               <img src="./img/ability/pen.png" alt="pen">
-               <h3>It have more functional</h3>
-               <p>You can to use a many tools <br/>
-                  for wonderful writting about your goods</p>
+       <div class="container flex space-between ability-content ability-flex-mobile">
+           <div class="ability-first ability-component-mobile">
+               <div>
+                    <img src="./img/ability/pen.png" alt="pen">
+                </div>
+                <div>
+                    <h3>It have more functional</h3>
+                    <p>You can to use a many tools <br/>
+                    for wonderful writting about your goods</p>
+                </div>
            </div>
-           <div>
-               <img src="./img/ability/monitor.png" alt="monitor">
-               <h3>It's cross-platform</h3>
-               <p>There are from any platform your goods</p>
+           <div class="ability-component-mobile">
+               <div>
+                    <img src="./img/ability/monitor.png" alt="monitor">
+               </div>
+               <div>
+                    <h3>It's cross-platform</h3>
+                    <p>There are from any platform your goods</p>
+               </div>
            </div>
-           <div class="ability-third">>
-               <img src="./img/ability/cart.png" alt="cart">
-               <h3>It's simple for trade</h3>
-               <p>Full functional is simple <br/>
-                  for your future </p>
+           <div class="ability-third ability-component-mobile">
+                <div>
+                    <img src="./img/ability/cart.png" alt="cart">
+                </div>
+                <div>
+                    <h3>It's simple for trade</h3>
+                    <p>Full functional is simple <br/>
+                        for your future </p>
+                </div>
            </div>
        </div>
    </div>
    <div class="description">
-       <div class="container flex">
+       <div class="container flex description-flex-mobile">
            <div class="description-content">
                <h1>Prechu is advantage!</h1>
                <div>
