--- a/services.html
+++ b/services.html
@@ -18,30 +18,15 @@
                </button>
                <nav class="header-nav">
                    <ul class="flex">
-                       <li><a href="#">Home</a></li>
+                       <li><a href="./index.html">Home</a></li>
                        <li><a href="./products.html">Products</a></li>
-                       <li><a href="./services.html">Services</a></li>
+                       <li><a href="#">Services</a></li>
                        <li><a href="./contact.html">Contact</a></li>
                    </ul>
                </nav>
            </div>
        </div>
    </header>
-   <main>
-       <div class="container flex">
-            <div class="main-img">
-                <img src="./img/main/phone.png" alt="phone">
-            </div>
-            <div class="main-title">
-                <h2>Prechu is simply</h2>
-                <p>
-                    Better app for the <br/>
-                    shopping & selling 
-                </p>
-                <a href="#" class="button button-hover">Sign up now</a>
-            </div>
-       </div>
-   </main>
    <div class="ability">
        <div class="container flex space-between ability-content ability-flex-mobile">
            <div class="ability-first ability-component-mobile">
