--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,21 @@
     <title>Prechu</title>
 </head>
 <body>
+    <section class="nav_mobile">
+        <div class="container">
+            <div class="cros">
+                <button>X</button>
+            </div>
+            <nav>
+                <ul class="flex flex_column">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="./products.html">Products</a></li>
+                    <li><a href="./services.html">Services</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </section>
    <header>
        <div class="container">
            <div class="header-wrapper flex space-between flex-end">
@@ -42,5 +57,6 @@
             </div>
        </div>
    </main>
+   <script type="module" src="./js/main.js"></script>
 </body>
 </html>
