--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="./style/style.css">
     <title>Prechu</title>
 </head>
+
 <body>
     <section class="nav_mobile">
         <div class="container">
@@ -24,39 +26,42 @@
             </nav>
         </div>
     </section>
-   <header>
-       <div class="container">
-           <div class="header-wrapper flex space-between flex-end">
-               <div class="header-logo"><h1>Prechu</h1></div>
-               <button class="header-button">
-                   <img src="./img/media/menu.png" alt="menu">
-               </button>
-               <nav class="header-nav">
-                   <ul class="flex">
-                       <li><a href="./index.html">Home</a></li>
-                       <li><a href="./products.html">Products</a></li>
-                       <li><a href="./services.html">Services</a></li>
-                       <li><a href="#">Contact</a></li>
-                   </ul>
-               </nav>
-           </div>
-       </div>
-   </header>
-   <main>
-       <div class="container flex">
+    <header>
+        <div class="container">
+            <div class="header-wrapper flex space-between flex-end">
+                <div class="header-logo">
+                    <h1>Prechu</h1>
+                </div>
+                <button class="header-button">
+                    <img src="./img/media/menu.png" alt="menu">
+                </button>
+                <nav class="header-nav">
+                    <ul class="flex">
+                        <li><a href="./index.html">Home</a></li>
+                        <li><a href="./products.html">Products</a></li>
+                        <li><a href="./services.html">Services</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
+    <main>
+        <div class="container flex">
             <div class="main-img">
                 <img src="./img/main/phone.png" alt="phone">
             </div>
             <div class="main-title">
                 <h2>Contact</h2>
                 <p>
-                Number: +1 302-945-777 <br/>
-                Email: prechuJack@gmail.com <br/>
-                Telegram: @prechu-world
+                    Number: +1 302-945-777 <br />
+                    Email: prechuJack@gmail.com <br />
+                    Telegram: @prechu-world
                 </p>
             </div>
-       </div>
-   </main>
-   <script type="module" src="./js/main.js"></script>
+        </div>
+    </main>
+    <script type="module" src="./js/main.js"></script>
 </body>
+
 </html>
