--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="./style/style.css">
     <title>Prechu</title>
 </head>
+
 <body>
     <section class="nav_mobile">
         <div class="container">
@@ -24,89 +26,93 @@
             </nav>
         </div>
     </section>
-   <header>
-       <div class="container">
-           <div class="header-wrapper flex space-between flex-end">
-               <div class="header-logo"><h1>Prechu</h1></div>
-               <button class="header-button">
-                   <img src="./img/media/menu.png" alt="menu">
-               </button>
-               <nav class="header-nav">
-                   <ul class="flex">
-                       <li><a href="#">Home</a></li>
-                       <li><a href="./products.html">Products</a></li>
-                       <li><a href="./services.html">Services</a></li>
-                       <li><a href="./contact.html">Contact</a></li>
-                   </ul>
-               </nav>
-           </div>
-       </div>
-   </header>
-   <main>
-       <div class="container flex">
+    <header>
+        <div class="container">
+            <div class="header-wrapper flex space-between flex-end">
+                <div class="header-logo">
+                    <h1>Prechu</h1>
+                </div>
+                <button class="header-button">
+                    <img src="./img/media/menu.png" alt="menu">
+                </button>
+                <nav class="header-nav">
+                    <ul class="flex">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="./products.html">Products</a></li>
+                        <li><a href="./services.html">Services</a></li>
+                        <li><a href="./contact.html">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
+    <main>
+        <div class="container flex">
             <div class="main-img">
                 <img src="./img/main/phone.png" alt="phone">
             </div>
             <div class="main-title">
                 <h2>Prechu is simply</h2>
                 <p>
-                    Better app for the <br/>
-                    shopping & selling 
+                    Better app for the <br />
+                    shopping & selling
                 </p>
                 <a href="#" class="button button-hover">Sign up now</a>
             </div>
-       </div>
-   </main>
-   <div class="ability">
-       <div class="container flex space-between ability-content ability-flex-mobile">
-           <div class="ability-first ability-component-mobile">
-               <div>
+        </div>
+    </main>
+    <div class="ability">
+        <div class="container flex space-between ability-content ability-flex-mobile">
+            <div class="ability-first ability-component-mobile">
+                <div>
                     <img src="./img/ability/pen.png" alt="pen">
                 </div>
                 <div>
                     <h3>It have more functional</h3>
-                    <p>You can to use a many tools <br/>
-                    for wonderful writting about your goods</p>
+                    <p>You can to use a many tools <br />
+                        for wonderful writting about your goods</p>
                 </div>
-           </div>
-           <div class="ability-component-mobile">
-               <div>
+            </div>
+            <div class="ability-component-mobile">
+                <div>
                     <img src="./img/ability/monitor.png" alt="monitor">
-               </div>
-               <div>
+                </div>
+                <div>
                     <h3>It's cross-platform</h3>
                     <p>There are from any platform your goods</p>
-               </div>
-           </div>
-           <div class="ability-third ability-component-mobile">
+                </div>
+            </div>
+            <div class="ability-third ability-component-mobile">
                 <div>
                     <img src="./img/ability/cart.png" alt="cart">
                 </div>
                 <div>
                     <h3>It's simple for trade</h3>
-                    <p>Full functional is simple <br/>
+                    <p>Full functional is simple <br />
                         for your future </p>
                 </div>
-           </div>
-       </div>
-   </div>
-   <div class="description">
-       <div class="container flex description-flex-mobile">
-           <div class="description-content">
-               <h1>Prechu is advantage!</h1>
-               <div>
-                   <img src="./img/description/bigcart.png" alt="bigcart">
-               </div>
-           </div>
-           <div class="description-text">
-               <h4>About us</h4>
-               <p>
-                We are company which foundation in 2012 year. We created many app with help our a big team so It is a our done app. We hope that It will help your selling.
-                If you want added a new offer you can to write us.
-               </p>
-           </div>
-       </div>
-   </div>
-   <script type="module" src="./js/main.js"></script>
+            </div>
+        </div>
+    </div>
+    <div class="description">
+        <div class="container flex description-flex-mobile">
+            <div class="description-content">
+                <h1>Prechu is advantage!</h1>
+                <div>
+                    <img src="./img/description/bigcart.png" alt="bigcart">
+                </div>
+            </div>
+            <div class="description-text">
+                <h4>About us</h4>
+                <p>
+                    We are company which foundation in 2012 year. We created many app with help our a big team so It is
+                    a our done app. We hope that It will help your selling.
+                    If you want added a new offer you can to write us.
+                </p>
+            </div>
+        </div>
+    </div>
+    <script type="module" src="./js/main.js"></script>
 </body>
+
 </html>
